# Code-Writer

./: .gitignore  README.md  app.Dockerfile  docker-compose.yml  main.cpp  pyproject.toml  setup.sh
.legacy/: README.md  main.cpp
.legacy/llamacpp_client/: README.md
config/: settings.json
config/prompts/: error_fix.txt  system.txt  user_task.txt
legacy/: problem.txt
llamacpp_client/: client.cpp
resources/big-int-division/: problem_description.txt
resources/big-int-division/tests_secret/expected/: 1
resources/big-int-division/tests_secret/in/: 1
resources/factorial/: problem_description.txt
resources/order/: problem_description.txt
resources/order/tests_secret/expected/: 1
resources/prime-reduction/: problem_description.txt
resources/prime-reduction/tests_public/expected/: 1
resources/prime-reduction/tests_public/in/: 1
resources/prime-reduction/tests_secret/expected/: 1
resources/prime-reduction/tests_secret/in/: 1
resources/primes/: problem_description.txt
resources/skretka/: problem_description.txt
resources/template/: main.cpp  problem_description.txt
src/: main.py
src/Code-Writer/core/: client.py  compiler.py  runner.py  tester.py
src/Code-Writer/utils/: config_loader.py  exceptions.py  file_validator.py  json_parser.py  prompt.py
src/CodeWriter/: main.py
src/CodeWriter/core/: client.py  compiler.py  runner.py  solver.py  tester.py
src/CodeWriter/utils/: config_loader.py  exceptions.py  file_validator.py  json_parser.py  logger.py  prompt.py
tests/factorial/: main.cpp  problem_description.txt
(+6 files in other folders)
